# cogito

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sbt  linker.sh  package-lock.json  rustfmt.toml
alonzo/: Cargo.toml
alonzo/src/: lib.rs
aws-test/: Cargo.toml
aws-test/src/: main.rs
cantor/: Cargo.toml  README.md
cluster-fudge/: README.md  create_role.sh
cluster-fudge/airflow/k8s/: airflow_pods.yaml
cluster-fudge/micro_k8s/: mk8s.yml
cluster-fudge/micro_k8s/buffer/: main-node.txt  master-node.txt
cluster-fudge/micro_k8s/inventory/: cluster  cluster.yml
cluster-fudge/role-template/: README.md
cmdr/: Cargo.toml
cmdr/src/: main.rs
commander/: Cargo.toml
commander/src/: async_cmd.rs  lib.rs
commander/src/sync_cmd/: mod.rs  (+3 more)
crossbow/: Cargo.toml  README,md  README.md
crossbow/src/: lib.rs  libs.rs  main.rs
crossbow/src/libs/: dag.rs  meta.rs  test_meta.rs
docker/aws-lambda/: Dockerfile
githooks/: pre-commit  pre-push
ignite/: Cargo.toml  README.md
ignite/src/: lib.rs
lambda-example/: Cargo.toml  package-lock.json  package.json  serverless.yml
librarian/: Cargo.toml
notebooks/: answer.txt  fp-101-chp2.ipynb  fp-101.ipynb  pearls.ipynb  rust-101-chp0.ipynb  rust-101-chp1.ipynb  rust-101-chp2.ipynb  rust-improved.ipynb  rust-tips.ipynb  scala-projects.ipynb  setup.ipynb
notebooks/.ipynb_checkpoints/: fp-101-checkpoint.ipynb  setup-checkpoint.ipynb
reveles/: Cargo.toml  README.md
rocked/: Cargo.toml
serverless-fe2o3/: README.md  example-erverless.yml  example-serverless.yml  package-lock.json  package.json  tsconfig.json
serverless-fe2o3/src/: data.js  data.ts  plugin.js  plugin.ts
utils/: Cargo.toml
utils/src/: lib.rs  main.rs
(+18 files in other folders)
