[package]
name = "aws-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
tokio = { version = "1", features = ["full"] }
aws-lambda-rust-runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", package = "lambda_runtime", tag = "v0.4.1" }
log = "0.4"
simple_logger = "1"